# colornames

./: .gitignore  Cargo.toml  README.md  TODO.md
crates/colornames/: Cargo.toml
crates/colornames/src/: color_data.rs  colors.rs  lib.rs
crates/generate/: Cargo.toml
crates/generate/src/: colors.rs  main.rs
scripts/: gen
