
[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Conversion from named colors to RGB"
license = "MIT"
repository = "https://github.com/cortesi/colornames"
keywords = ["color", "colornames"]
readme = "README.md"

[workspace]
resolver = "2"
members = ["crates/*"]

