
[workspace.package]
version = "0.0.6"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "An enum of color names, with a catchall RGB variant"
license = "MIT"
repository = "https://github.com/cortesi/colornames"
keywords = ["color", "colornames", "color-names", "rgb", "colors"]
categories = ["graphics"]
readme = "README.md"
documentation = "https://docs.rs/colornames"
homepage = "https://github.com/cortesi/colornames"


[workspace]
resolver = "2"
members = ["crates/*"]

